<?xml version="1.0" encoding="utf-8"?>

<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@drawable/profile_background"
    tools:openDrawer="start">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Main Content Layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:fitsSystemWindows="true">

        <!-- Toolbar -->
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:titleTextColor="@color/white"
            app:iconTint="@android:color/white"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        <!-- Content Section -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:weightSum="1">

            <!-- Profile Image -->
            <ImageView
                android:id="@+id/profile_image_view"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_person"
                android:layout_marginBottom="16dp"/>

            <TextView
                android:id="@+id/usernameView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textColor="@color/white"
                android:layout_marginTop="16dp"
                android:minHeight="48dp"
                android:padding="12dp"
                android:layout_gravity="center_horizontal"
                android:textAlignment="center"
                android:textSize="30sp"
                />


            <!-- Upload Image Button -->
            <Button
                android:id="@+id/uploadImageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/upload_profile_image"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/rounded_button"
                android:layout_marginTop="16dp"
                android:visibility="gone"
                android:minHeight="48dp"
                android:padding="12dp"
                android:focusable="false"
                android:clickable="false"
                android:enabled="false"/>

            <!-- First Name -->
            <EditText
                android:id="@+id/firstNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/first_name"
                android:inputType="textPersonName"
                android:autofillHints="name"
                android:textColor="@color/white"
                android:padding="12dp"
                android:layout_marginTop="8dp"
                android:minHeight="48dp"
                android:enabled="false"
                />

            <!-- Last Name -->
            <EditText
                android:id="@+id/lastNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/last_name"
                android:textColor="@color/white"
                android:inputType="textPersonName"
                android:autofillHints="name"
                android:padding="12dp"
                android:layout_marginTop="8dp"
                android:minHeight="48dp"
                android:enabled="false"
                />

            <!-- Gender Spinner -->
            <Spinner
                android:id="@+id/genderSpinnerUpdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:minHeight="48dp"
                android:enabled="false"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:background="@android:color/transparent"
                android:theme="@style/CustomSpinnerStyle"
                />

            <!-- Username -->
            <EditText
                android:id="@+id/usernameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:autofillHints="username"
                android:inputType="textEmailAddress"
                android:textColor="@color/white"
                android:padding="12dp"
                android:layout_marginTop="8dp"
                android:minHeight="48dp"
                android:enabled="false"/>

            <!-- Password with Eye Toggle -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/password"
                android:textColorHint="@color/white"
                android:background="@android:color/transparent"
                android:textColor="@color/white"
                app:endIconMode="password_toggle"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="password"
                    android:inputType="textPassword"
                    android:background="@android:color/transparent"
                    android:textColor="@color/white"
                    android:padding="12dp"
                    android:minHeight="48dp"
                    android:enabled="false"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <!-- Confirm Password with Eye Toggle -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/confirmPasswordInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/confirm_password"
                app:endIconMode="password_toggle"
                android:textColor="@color/white"
                android:background="@android:color/transparent"
                android:textColorHint="@color/white"
                android:visibility="invisible">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/confirmPasswordEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="password"
                    android:inputType="textPassword"
                    android:background="@android:color/transparent"
                    android:textColor="@color/white"
                    android:padding="12dp"
                    android:minHeight="48dp"
                    android:enabled="false"
                    android:visibility="invisible"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <!-- Register Button -->
            <Button
                android:id="@+id/updateButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/updateProfile"
                android:layout_marginTop="16dp"
                android:minHeight="48dp"
                android:background="@drawable/rounded_button"
                android:padding="12dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="8dp"
                android:layout_margin="10dp">

                <!-- Click me button to confirm action -->
                <Button
                    android:id="@+id/btnConfirm"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginHorizontal="10dp"
                    android:text="@string/confirm"
                    android:background="@drawable/rounded_button"
                    android:visibility="invisible"
                    />

                <!-- Button to cancel action -->
                <Button
                    android:id="@+id/btnCancel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginHorizontal="10dp"
                    android:text="@string/cancel"
                    android:background="@drawable/rounded_button"
                    android:visibility="invisible"/>
            </LinearLayout>


        </LinearLayout>


    </LinearLayout>

</ScrollView>
    <!-- Navigation View -->
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header_main"
        app:menu="@menu/activity_main_drawer" />
</androidx.drawerlayout.widget.DrawerLayout>





















